agrege propiedad al formulario e imagen a  somos

--- a/index.html
+++ b/index.html
@@ -95,8 +95,9 @@
         </div>
       </header>
       <section class="somos">
-        <div>
-          <h2 id="quienesSomos" class="titulo">Quienes somos</h2>
+        <div class="somos">
+          <img src="/img/logo.jpg" alt="logo" id="quienesSomos" />
+          <h2 class="titulo">Quienes somos</h2>
           <p class="textoParrafo">
             Somos una escuela primaria que cree en el poder del aprendizaje.
             Estamos comprometidos a proporcionar a nuestros estudiantes un
@@ -111,11 +112,12 @@
           <div class="row">
             <div class="col-12 col-md-4">
               <img
+                id="porQueElegirnos"
                 class="imagDescriptiva"
                 src="img/porQueElegirnos.jpg"
                 alt="imagenDescriptiva"
               />
-              <h2 id="porQueElegirnos" class="titulo">¿Por qué elegirnos</h2>
+              <h2 class="titulo">¿Por qué elegirnos?</h2>
               <p class="textoParrafo">
                 Porque Nuestra escuela primaria es una comunidad de aprendizaje
                 que brinda a los niños un entorno seguro y acogedor para
@@ -126,13 +128,12 @@
             </div>
             <div class="col-12 col-md-4">
               <img
+                id="propuestaEducativa"
                 class="imagDescriptiva"
                 src="img/propuestaEducativa.jpg"
                 alt="imagenDescriptiva"
               />
-              <h2 id="propuestaEducativa" class="titulo">
-                Propuesta Educativa
-              </h2>
+              <h2 class="titulo">Propuesta Educativa</h2>
               <p class="textoParrafo">
                 Nuestra propuesta educativa se basa en el aprendizaje activo, el
                 trabajo colaborativo y la atención a la diversidad. Creemos que
@@ -143,11 +144,12 @@
             </div>
             <div class="col-12 col-md-4">
               <img
+                id="ultimasNoticias"
                 class="imagDescriptiva"
                 src="img/ultimasnoticias.jpg"
                 alt="imagenDescriptiva"
               />
-              <h2 id="ultimasNoticias" class="titulo">Últimas Noticias</h2>
+              <h2 class="titulo">Últimas Noticias</h2>
               <p class="textoParrafo">
                 La escuela primaria de la comunidad recibió recientemente un
                 nuevo edificio de ciencias que cuenta con laboratorios de
@@ -162,6 +164,7 @@
         <form
           action="https://formsubmit.co/cdd549e640fcd9391986d8cd2129e28f"
           method="post"
+          enctype="multipart/form-data"
         >
           <fieldset>
             <legend>Datos del Alumno</legend>
