arregle una imagen logo

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       </header>
       <section class="somos">
         <div class="somos">
-          <img src="/img/logo.jpg" alt="logo" id="quienesSomos" />
+          <img src="img/logo.jpg" alt="logo" id="quienesSomos" />
           <h2 class="titulo">Quienes somos</h2>
           <p class="textoParrafo">
             Somos una escuela primaria que cree en el poder del aprendizaje.
